update to 21 java version